src/components/Starships/ShipCard/ShipCard.module.css
.shipCard {
  min-width: 600px;
  height: auto;

	outline: 1px solid rgb(104, 104, 104);
	
  transition: all 0.3s ease-in-out;
  cursor: pointer;

  position: relative;
  display: flex;
  flex-direction: column;
}

.shipCard:hover {
	outline: 1px solid rgb(221, 221, 221);
}
/* 3 arrow animation indicating additional information is available */
.showDetails {
  padding: 16px 12px;

  position: absolute;
  align-self: end;
  z-index: 1;
  visibility: hidden;

  opacity: 0;
  transition: opacity 0.5s ease-in-out;
}

.shipCard:hover > .showDetails {
	visibility: visible;
  opacity: 1;
  transition-delay: 0s;
}

.arrow:nth-child(1) {
  transition-delay: 0.1s;
}

.arrow:nth-child(2) {
  transition-delay: 0.2s;
}

.arrow:nth-child(3) {
  transition-delay: 0.3s;
}

.imgCont {
  max-width: 100%;
  min-height: 300px;
  position: relative;

  box-sizing: border-box;
  overflow: hidden;

  background-size: cover;
  background-repeat: no-repeat;
}

.infoCont {
  margin: 8px;
  outline: 1px solid rgb(104, 104, 104);

  display: flex;
  justify-content: space-between;
}

.name {
	margin: 0;
	padding: 4px 8px 0 8px;

	font-size: 1.7rem;
  text-decoration: underline rgb(104, 104, 104);

  transition: all 0.3s ease-in-out;
}

.name:hover {
  text-decoration: underline rgb(221, 221, 221);
}

.imperial {
  margin: 0;
	padding: 0 8px;

  color: rgb(179, 179, 179);
  font-family: Imperial;
  font-size: 0.7rem;
  letter-spacing: 1.5px;
}

.naboo {
  margin: 0;
	padding: 0 8px 4px 8px;

  color: rgb(179, 179, 179);
  font-family: Naboo;
  font-size: 0.5rem;
  letter-spacing: 1.5px;
}

.buyCont {
  margin: 0;
  padding: 4px 8px 8px 8px;

  display: flex;
  flex-direction: column;
}

.priceCont {
  position: relative;
}

.priceCont > div {
  padding-bottom: 16px;
  font-size: 1.5rem;
}

.priceCont > p {
  margin: 0;
  padding: 0;

  font-size: 1rem;
  text-align: right;

  position: absolute;
  top: 26px;
  right: 0;
}

button {
  border: 1px solid transparent;
  padding: 0.4rem 1rem;

  font-size: 1rem;
  font-family: inherit;

  background-color: transparent;
  border: 1px solid rgb(104, 104, 104);

  cursor: pointer;
  transition: all 0.3s ease-in-out;
}

button:hover {
  border: 1px solid rgb(0, 192, 64);
}

